--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <pre><code>libraryDependencies += "com.liyaos" %% "scala-forklift-slick" % "0.2.0-BETA"
 </code></pre>
 
-<p>check <a href="/example">example</a> for tutorial and example code.</p>
+<p>check <a href="https://github.com/lastland/scala-forklift/tree/master/example">example</a> for tutorial and example code.</p>
 
 <h3>
 <a id="quick-start" class="anchor" href="#quick-start" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quick Start</h3>
